--- a/Asliri/Base.lproj/Main.storyboard
+++ b/Asliri/Base.lproj/Main.storyboard
@@ -1,24 +1,141 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="jy8-t4-ziq">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <!--Open Camera Privy View Controller-->
+        <scene sceneID="E93-1H-OwY">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
+                <viewController storyboardIdentifier="ViewController" id="jy8-t4-ziq" customClass="OpenCameraPrivyViewController" customModule="Asliri" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="QtO-6g-FCt">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oXu-Sr-vMw" userLabel="Container View">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <subviews>
+                                    <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xaY-Ih-rTS">
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <color key="barTintColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                        <textAttributes key="titleTextAttributes">
+                                            <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <offsetWrapper key="textShadowOffset" horizontal="500" vertical="0.0"/>
+                                        </textAttributes>
+                                        <items>
+                                            <navigationItem title="Foto Selfie" largeTitleDisplayMode="never" id="5WN-JV-org"/>
+                                        </items>
+                                    </navigationBar>
+                                    <stackView opaque="NO" contentMode="scaleToFill" alignment="top" translatesAutoresizingMaskIntoConstraints="NO" id="mV2-O9-sOR">
+                                        <rect key="frame" x="20" y="64" width="335" height="114.5"/>
+                                        <subviews>
+                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="kHz-AR-uMU">
+                                                <rect key="frame" x="0.0" y="0.0" width="255" height="87.5"/>
+                                                <subviews>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Posisikan wajahmu ke dalam lingkaran yang sudah disediakan" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XKs-O9-4hv">
+                                                        <rect key="frame" x="0.0" y="0.0" width="249" height="29"/>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1. Pejamkan mata sebelah kiri" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mLZ-Zj-3Sg">
+                                                        <rect key="frame" x="0.0" y="34" width="166" height="14.5"/>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2. Buka mata sebelah kanan" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9uQ-rR-hUb">
+                                                        <rect key="frame" x="0.0" y="53.5" width="158" height="14.5"/>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="3. Buka mulut" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hpS-ze-n0F">
+                                                        <rect key="frame" x="0.0" y="73" width="77.5" height="14.5"/>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                </subviews>
+                                            </stackView>
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="mouth open left closed" translatesAutoresizingMaskIntoConstraints="NO" id="tze-VZ-1Hv">
+                                                <rect key="frame" x="255" y="0.0" width="80" height="80"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="80" id="E45-io-s7W"/>
+                                                    <constraint firstAttribute="width" constant="80" id="Eyz-Gj-cY1"/>
+                                                </constraints>
+                                            </imageView>
+                                        </subviews>
+                                    </stackView>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="k6O-6b-GDR" userLabel="Camera View" customClass="CircleView" customModule="Asliri" customModuleProvider="target">
+                                        <rect key="frame" x="37.5" y="188.5" width="300" height="350"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="300" id="Lp6-Rt-zyb"/>
+                                            <constraint firstAttribute="height" constant="350" id="sy5-u9-mWE"/>
+                                        </constraints>
+                                    </view>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9AF-En-jXd" customClass="RoundedButton1" customModule="Asliri" customModuleProvider="target">
+                                        <rect key="frame" x="30" y="597" width="315" height="50"/>
+                                        <color key="backgroundColor" red="0.33799785380000003" green="0.069463662800000006" blue="0.60395753379999995" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="50" id="im1-hd-s0x"/>
+                                        </constraints>
+                                        <state key="normal" title="Mulai tanda tangan digital">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </state>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="boolean" keyPath="rounded" value="YES"/>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                                <real key="value" value="25"/>
+                                            </userDefinedRuntimeAttribute>
+                                        </userDefinedRuntimeAttributes>
+                                        <connections>
+                                            <action selector="takePictureWith_sender:" destination="jy8-t4-ziq" eventType="touchUpInside" id="Akb-7e-VOm"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstItem="xaY-Ih-rTS" firstAttribute="top" secondItem="oXu-Sr-vMw" secondAttribute="top" symbolic="YES" id="2Ed-Bd-vQe"/>
+                                    <constraint firstItem="k6O-6b-GDR" firstAttribute="centerX" secondItem="oXu-Sr-vMw" secondAttribute="centerX" id="78D-o2-86j"/>
+                                    <constraint firstItem="9AF-En-jXd" firstAttribute="leading" secondItem="oXu-Sr-vMw" secondAttribute="leading" constant="30" id="EUM-6Q-BCj"/>
+                                    <constraint firstAttribute="trailing" secondItem="xaY-Ih-rTS" secondAttribute="trailing" id="KaC-mm-phE"/>
+                                    <constraint firstItem="xaY-Ih-rTS" firstAttribute="leading" secondItem="oXu-Sr-vMw" secondAttribute="leading" symbolic="YES" id="V4J-ao-zmL"/>
+                                    <constraint firstItem="k6O-6b-GDR" firstAttribute="top" secondItem="mV2-O9-sOR" secondAttribute="bottom" constant="10" id="bZw-od-mja"/>
+                                    <constraint firstItem="mV2-O9-sOR" firstAttribute="leading" secondItem="oXu-Sr-vMw" secondAttribute="leading" constant="20" id="eDV-c5-EKi"/>
+                                    <constraint firstItem="mV2-O9-sOR" firstAttribute="top" secondItem="xaY-Ih-rTS" secondAttribute="bottom" constant="20" id="eXO-Wj-x68"/>
+                                    <constraint firstAttribute="trailing" secondItem="9AF-En-jXd" secondAttribute="trailing" constant="30" id="mYc-Sd-jYe"/>
+                                    <constraint firstItem="k6O-6b-GDR" firstAttribute="centerY" secondItem="oXu-Sr-vMw" secondAttribute="centerY" constant="30" id="onI-Oz-hbt"/>
+                                    <constraint firstAttribute="trailing" secondItem="mV2-O9-sOR" secondAttribute="trailing" constant="20" id="tm2-YO-VoX"/>
+                                    <constraint firstAttribute="bottom" secondItem="9AF-En-jXd" secondAttribute="bottom" constant="20" id="wdh-O8-uFd"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstAttribute="bottom" secondItem="oXu-Sr-vMw" secondAttribute="bottom" id="3Ed-KR-h3B"/>
+                            <constraint firstItem="oXu-Sr-vMw" firstAttribute="leading" secondItem="FUm-oS-zuA" secondAttribute="leading" id="JbT-GC-iec"/>
+                            <constraint firstItem="oXu-Sr-vMw" firstAttribute="top" secondItem="FUm-oS-zuA" secondAttribute="top" id="LCN-YJ-AmD"/>
+                            <constraint firstItem="FUm-oS-zuA" firstAttribute="trailing" secondItem="oXu-Sr-vMw" secondAttribute="trailing" id="O4f-eb-VWv"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="FUm-oS-zuA"/>
                     </view>
+                    <connections>
+                        <outlet property="captureBtn" destination="9AF-En-jXd" id="GbC-5n-kHG"/>
+                        <outlet property="circleProgress" destination="k6O-6b-GDR" id="bwd-Wn-rcr"/>
+                    </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="29r-Dj-0Wa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="-426.39999999999998" y="89.505247376311857"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="mouth open left closed" width="65" height="58.5"/>
+    </resources>
 </document>
